--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -16,9 +16,10 @@
   justify-content: space-between;
   padding: 50px;
   padding-right: 40px;
+  padding-bottom: 0%;
+  z-index: 1000;
 
   &__title {
-    font-style: normal;
     font-weight: 700;
     font-size: 32px;
     line-height: 18px;
@@ -43,12 +44,7 @@
   display: flex;
   justify-content: space-between;
   height: 100%;
-
-  .column {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
+  z-index: 1000;
 
   .column_vertical {
     display: block;
@@ -72,11 +68,10 @@
     display: flex;
     flex-direction: column;
     margin-top: 375px;
-    font-style: normal;
-    font-weight: 400;
+    margin-right: 38px;
     font-size: 14px;
     line-height: 18px;
-    margin-bottom: 38px;
+
   }
 
   &__link {
@@ -138,7 +133,7 @@
     justify-content: center;
     align-items: flex-start;
     margin-left: 48px;
-    margin-top: 55px;
+    margin-top: 105px;
 
     &__element {
       &:not(:first-child) {
@@ -157,14 +152,42 @@
 
   }
 
+}
 
+.center-info {
+  display: flex;
+  flex-direction: column;
+
+  // justify-content: center;
+  &__text {
+    margin-top: 172px;
+    margin-left: 109px;
+  }
+
+  .button {
+    width: 185px;
+    height: 72px;
+    margin-left: 24px;
+    border-radius: 8px;
+
+    &_add {
+      background: #030304;
+      color: #ffffff;
+    }
+
+    &_watch {
+      background: #FFFFFF;
+      border: 1px solid #808080;
+      box-sizing: border-box;
+    }
+  }
 }
 
 .line {
   &__first {
     position: absolute;
     height: 100vh;
-    width: 2px;
+    width: 1px;
     top: 0;
     background-color: #E9E9E9;
     left: 19%;
@@ -173,26 +196,26 @@
   &__second {
     position: absolute;
     height: 100vh;
-    width: 2px;
+    width: 1px;
     top: 0;
     background-color: #E9E9E9;
-
     left: 35%;
   }
 
   &__third {
     position: absolute;
     height: 100vh;
-    width: 2px;
+    width: 1px;
     top: 0;
     background-color: #E9E9E9;
     left: 55%;
+
   }
 
   &__fourth {
     position: absolute;
     height: 100vh;
-    width: 2px;
+    width: 1px;
     top: 0;
     background-color: #E9E9E9;
     left: 73.4%;
