add second page

--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -24,6 +24,7 @@
     font-size: 32px;
     line-height: 18px;
     color: #000000;
+    text-decoration: none;
   }
 
   &__icons {
@@ -152,13 +153,41 @@
 
   }
 
+  .column {
+    width: 100vw;
+  }
+
+  .row {
+    display: flex;
+    justify-content: center;
+
+    :hover {
+      background: #FFFFFF;
+      box-shadow: 0px 2px 4px rgba(59, 69, 123, 0.2), 0px 4px 8px rgba(92, 107, 192, 0.2);
+      border-radius: 8px;
+    }
+  }
+
+  .product {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 16px;
+
+    :hover {
+      box-shadow: 0px 0px 0px, 0px 0px 0px;
+      border-radius: 0px;
+    }
+
+    height: 472px;
+    min-width: 226px;
+  }
 }
 
 .center-info {
   display: flex;
   flex-direction: column;
 
-  // justify-content: center;
   &__text {
     margin-top: 172px;
     margin-left: 109px;
