--- a/src/assets/styles.scss
+++ b/src/assets/styles.scss
@@ -49,7 +49,7 @@
 
   .column_vertical {
     display: block;
-    margin-right: 32px;
+    margin-right: 38px;
   }
 
   &-nav {
@@ -69,7 +69,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 375px;
-    margin-right: 38px;
     font-size: 14px;
     line-height: 18px;
 
@@ -184,18 +183,14 @@
 
 .main-catalog {
   .column {
+    margin-top: 16px;
+    margin-bottom: 16px;
     width: 100vw;
   }
 
   .row {
     display: flex;
     justify-content: center;
-
-    :hover {
-      background: #FFFFFF;
-      box-shadow: 0px 2px 4px rgba(59, 69, 123, 0.2), 0px 4px 8px rgba(92, 107, 192, 0.2);
-      border-radius: 8px;
-    }
   }
 
   .product {
@@ -207,9 +202,10 @@
     font-style: normal;
     font-weight: 400;
 
-    :hover {
-      box-shadow: 0px 0px 0px, 0px 0px 0px;
-      border-radius: 0px;
+    &:hover {
+      background: #FFFFFF;
+      box-shadow: 0px 2px 4px rgba(59, 69, 123, 0.2), 0px 4px 8px rgba(92, 107, 192, 0.2);
+      border-radius: 8px;
     }
 
     height: 440px;
