--- a/src/assets/catalog/catalog.css
+++ b/src/assets/catalog/catalog.css
@@ -1,8 +1,22 @@
+.parent-catalog {
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 400;
+    margin: 0px;
+    padding: 0px;
+}
+
+.catalog {
+    padding: 0px 16px;
+    box-shadow: 0px 1px 2px rgba(58, 58, 68, 0.24), 0px 2px 4px rgba(90, 91, 106, 0.24);
+    border-radius: 8px;
+}
+
 .products {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(259px, 1fr));
-    margin: 16px 0px;
-    padding-top: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    padding: 16px 0px;
+    margin: 0px;
 
 }
 
@@ -10,7 +24,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 16px;
+    padding: 8px;
     font-weight: 400;
     height: 440px;
     width: 227px;
